@@ -1,6 +1,8 @@
 package com.engly.engly_server.exception;
 
 import jakarta.validation.ConstraintViolationException;
+import org.springframework.beans.TypeMismatchException;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.BadCredentialsException;
@@ -10,70 +12,94 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<ApiError> handleGeneralExceptions(Exception ex) {
+    public ResponseEntity<ApiErrorResponse> handleGeneralExceptions(Exception ex) {
         return buildResponse(HttpStatus.INTERNAL_SERVER_ERROR, "Unexpected error occurred", ex);
     }
 
+    @ExceptionHandler(TypeMismatchException.class)
+    public ResponseEntity<ApiErrorResponse> handleTypeMismatch(TypeMismatchException ex) {
+        return buildResponse(HttpStatus.BAD_REQUEST, ex.getPropertyName(), ex.getMessage());
+    }
+
     @ExceptionHandler(ResponseStatusException.class)
-    public ResponseEntity<ApiError> handleResponseStatusException(ResponseStatusException ex) {
+    public ResponseEntity<ApiErrorResponse> handleResponseStatusException(ResponseStatusException ex) {
         return buildResponse((HttpStatus) ex.getStatusCode(), ex.getReason(), ex);
     }
 
     @ExceptionHandler(NotFoundException.class)
-    public ResponseEntity<ApiError> handleNotFoundException(NotFoundException ex) {
+    public ResponseEntity<ApiErrorResponse> handleNotFoundException(NotFoundException ex) {
         return buildResponse(HttpStatus.NOT_FOUND, "Resource not found", ex);
     }
 
+    @ExceptionHandler(GenerateTokenException.class)
+    public ResponseEntity<ApiErrorResponse> handleNotificationException(GenerateTokenException ex) {
+        return buildResponse(HttpStatus.INTERNAL_SERVER_ERROR, "Cannot generate token for verify email", ex);
+    }
+
+    @ExceptionHandler(DataIntegrityViolationException.class)
+    public ResponseEntity<ApiErrorResponse> handleDataIntegrityViolationException(DataIntegrityViolationException ex) {
+        return buildResponse(HttpStatus.CONFLICT, "Duplicate entry", "A record with the same unique identifier already exists");
+    }
+
     @ExceptionHandler(TokenNotFoundException.class)
-    public ResponseEntity<ApiError> handleTokenNotFoundException(TokenNotFoundException ex) {
-        return buildResponse(HttpStatus.BAD_REQUEST, "Invalid token", ex);
+    public ResponseEntity<ApiErrorResponse> handleTokenNotFoundException(TokenNotFoundException ex) {
+        return buildResponse(HttpStatus.UNAUTHORIZED, "Invalid token", ex);
+    }
+
+    @ExceptionHandler(AuthenticationException.class)
+    public ResponseEntity<ApiErrorResponse> handleAuthenticationException(AuthenticationException ex) {
+        return buildResponse(HttpStatus.UNAUTHORIZED, "Something went wrong", ex);
     }
 
     @ExceptionHandler(BadCredentialsException.class)
-    public ResponseEntity<ApiError> handleBadCredentialsException(BadCredentialsException ex) {
+    public ResponseEntity<ApiErrorResponse> handleBadCredentialsException(BadCredentialsException ex) {
         return buildResponse(HttpStatus.UNAUTHORIZED, "Authentication failed", ex);
     }
 
     @ExceptionHandler(FieldValidationException.class)
-    public ResponseEntity<ApiError> handleFieldValidationException(FieldValidationException ex) {
+    public ResponseEntity<ApiErrorResponse> handleFieldValidationException(FieldValidationException ex) {
         return buildResponse(HttpStatus.BAD_REQUEST, "Validation error", ex);
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ApiError> handleMethodArgumentNotValidException(MethodArgumentNotValidException ex) {
-        List<String> errors = ex.getBindingResult()
+    public ResponseEntity<ApiErrorResponse> handleMethodArgumentNotValidException(MethodArgumentNotValidException ex) {
+        var errors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
                 .map(error -> error.getField() + ": " + error.getDefaultMessage())
-                .collect(Collectors.toList());
+                .toList();
 
         return buildResponse("Validation failed", errors);
     }
 
     @ExceptionHandler(ConstraintViolationException.class)
-    public ResponseEntity<ApiError> handleConstraintViolationException(ConstraintViolationException ex) {
-        List<String> errors = ex.getConstraintViolations()
+    public ResponseEntity<ApiErrorResponse> handleConstraintViolationException(ConstraintViolationException ex) {
+        var errors = ex.getConstraintViolations()
                 .stream()
                 .map(violation -> violation.getPropertyPath() + ": " + violation.getMessage())
-                .collect(Collectors.toList());
+                .toList();
 
         return buildResponse("Constraint violation", errors);
     }
 
-    private ResponseEntity<ApiError> buildResponse(HttpStatus status, String message, Exception ex) {
+    private ResponseEntity<ApiErrorResponse> buildResponse(HttpStatus status, String message, Exception ex) {
         return ResponseEntity.status(status)
-                .body(new ApiError(status.value(), message, ex.getMessage()));
+                .body(new ApiErrorResponse(status.value(), message, ex.getMessage()));
     }
 
-    private ResponseEntity<ApiError> buildResponse(String message, List<String> errors) {
+    private ResponseEntity<ApiErrorResponse> buildResponse(HttpStatus status, String message, String ex) {
+        return ResponseEntity.status(status)
+                .body(new ApiErrorResponse(status.value(), message, ex));
+    }
+
+    private ResponseEntity<ApiErrorResponse> buildResponse(String message, List<String> errors) {
         return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                .body(new ApiError(HttpStatus.BAD_REQUEST.value(), message, String.join(", ", errors)));
+                .body(new ApiErrorResponse(HttpStatus.BAD_REQUEST.value(), message, String.join(", ", errors)));
     }
 }
 
